# pybnc

./: .gitignore  README.md  pyproject.toml
examples/: cancer.csv  paper1.csv  paper2.csv  test.py  test_cancer.py
pybnc/: __init__.py  bayes_net.py  graph.py  sample.py  utils.py
pybnc/parameter/: hdp.py
pybnc/structure/: __init__.py  kdb.py  structure.py
