[tool.poetry]
name = "pybnc"
version = "0.1.0"
description = ""
authors = ["Connor Cooper <cooper.connor.17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.0.3"
graphviz = "^0.20.1"
graphlib = "^0.9.5"
numpy = "^1.25.2"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
